# dependable

./: .dependable.toml  .gitignore  AGENTS.md  Cargo.toml  README.md  dependable-prd.md  hk.pkl  mise.toml  release-plz.toml
.github/workflows/: ci.yml  homebrew.yml  release-binaries.yml  release-plz.yml
aqua/: registry.yaml
crates/dependable/: CHANGELOG.md  Cargo.toml
crates/dependable-core/: CHANGELOG.md  Cargo.toml
crates/dependable-core/src/: ecosystem.rs  error.rs  graph.rs  item.rs  lib.rs  manifest.rs  npmrc.rs  result.rs
crates/dependable-core/src/lockfiles/: cargo_lock.rs  cargo_lock_graph.rs  composer_lock.rs  dart_pubspec_lock.rs  mix_lock.rs  mod.rs  package_lock_json.rs
crates/dependable-core/src/parsers/: cargo_toml.rs  cargo_workspace.rs  composer_json.rs  csproj.rs  deno_json.rs  go_mod.rs  json_scan.rs  mix_exs.rs  mod.rs  package_json.rs  pnpm_workspace.rs  position.rs  pubspec_yaml.rs  pyproject_toml.rs  requirements_txt.rs
crates/dependable-core/src/semver/: checker.rs  elixir.rs  mod.rs  normalize.rs  nuget.rs  python.rs
crates/dependable-fetch/: CHANGELOG.md  Cargo.toml
crates/dependable-fetch/src/: cache.rs  check.rs  dependency.rs  error.rs  lib.rs  tree.rs
crates/dependable-fetch/src/osv/: client.rs  mod.rs  types.rs
crates/dependable-fetch/src/registries/: crates_io.rs  go_proxy.rs  hex.rs  jsr.rs  mod.rs  npm.rs  nuget.rs  packagist.rs  pub_dev.rs  pypi.rs
crates/dependable-fetch/tests/: checker.rs  http.rs  tree.rs
crates/dependable/src/: cli.rs  config.rs  discover.rs  fix.rs  main.rs  runner.rs
crates/dependable/src/output/: json.rs  mod.rs  table.rs  text.rs  tree.rs
crates/dependable/tests/: cli_skip.rs  fixture_csharp.rs  fixture_dart.rs  fixture_elixir.rs  fixture_go.rs  fixture_js.rs  fixture_parse.rs  fixture_php.rs  fixture_python.rs  fixture_tree.rs
crates/dependable/tests/fixtures/sample-csharp/: App.csproj
crates/dependable/tests/fixtures/sample-dart/: pubspec.yaml
crates/dependable/tests/fixtures/sample-deno/: deno.jsonc
crates/dependable/tests/fixtures/sample-elixir/: mix.exs
crates/dependable/tests/fixtures/sample-go/: go.mod
crates/dependable/tests/fixtures/sample-npm/: package-lock.json  package.json
crates/dependable/tests/fixtures/sample-php/: composer.json
crates/dependable/tests/fixtures/sample-pnpm/: pnpm-workspace.yaml
crates/dependable/tests/fixtures/sample-python/: pyproject.toml  requirements.txt
crates/dependable/tests/fixtures/sample-rust/: Cargo.toml
crates/dependable/tests/fixtures/sample-workspace/: Cargo.toml
crates/dependable/tests/fixtures/sample-workspace/crates/app/: Cargo.toml
crates/dependable/tests/fixtures/sample-workspace/crates/util/: Cargo.toml
docs/: INTEGRATIONS.md  SCOPE.md  dependable-prd.md
packaging/homebrew/: dependable.rb
