[package]
name = "dependable-fetch"
description = "Async registry and OSV fetch layer for dependable."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dependable-core = { path = "../dependable-core" }
semver.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["fs"] }
moka.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock.workspace = true
