[package]
name = "dependable"
description = "CLI to check dependency versions and scan for known vulnerabilities."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
default-run = "dependable"

[[bin]]
name = "dependable"
path = "src/main.rs"

[dependencies]
dependable-core = { path = "../dependable-core" }
dependable-fetch = { path = "../dependable-fetch" }
toml_edit.workspace = true
clap.workspace = true
tokio.workspace = true
futures.workspace = true
owo-colors.workspace = true
indicatif.workspace = true
figment.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
